test/functional/should-fail/run/testrun2.f3
/*
 * @test/fail
 */

import java.lang.System;

var v:Integer = 10;

public function f(i:Integer) { System.out.println(i); }

f(v);


